--- a/sway/tofi/config
+++ b/sway/tofi/config
@@ -8,7 +8,7 @@ border-width = 0
 outline-width = 0
 text-color = #C6C8D1
 font-size = 16
-font =/usr/share/fonts/cantarell/Cantarell-VF.otf
+font = /home/m/.local/share/fonts/font/UbuntuNerdFont.ttf
 selection-color = #e27878
 width = 400
 height = 400
