--- a/sway/waybar/config.jsonc
+++ b/sway/waybar/config.jsonc
@@ -21,6 +21,7 @@
         "bluetooth",
    //     "idle_inhibitor",
    "pulseaudio",
+ //  "wireplumber",
         // "cpu",
         // "memory",
         // "temperature",
