--- a/sway/waybar/config.jsonc
+++ b/sway/waybar/config.jsonc
@@ -8,10 +8,10 @@
         "sway/scratchpad"
     ],
     "modules-right": [
-        "network",
         "pulseaudio",
-        "battery",
+        "network",
         "power-profiles-daemon",
+        "battery",
         "custom/power",
         "tray",
         "clock"
@@ -45,11 +45,10 @@
             "warning": 30,
             "critical": 15
         },
-        "format": "{capacity}% {icon} ",
+        "format": "{capacity}% {icon}",
         "format-full": "{capacity}% {icon}",
-        "format-charging": "{capacity}% ",
-        "format-plugged": "{capacity}% ",
-        "format-alt": "{time} {icon}",
+        "format-charging": " ",
+        "format-plugged": " ",
         "format-icons": ["", "", "", "", ""]
     },
     "battery#bat2": {
@@ -57,7 +56,7 @@
     },
     "power-profiles-daemon": {
         "format": "{icon} ",
-        "tooltip-format": "Power profile: {profile}\nDriver: {driver}",
+        "tooltip-format": "Power profile: {profile}",
         "tooltip": true,
         "format-icons": {
             "default": "",
@@ -67,10 +66,10 @@
         }
     },
     "network": {
-        "format-wifi": "{essid} ({signalStrength}%)  ",
-        "format-ethernet": "{ipaddr}/{cidr} ",
-        "tooltip-format": "{ifname} via {gwaddr} ",
-        "format-linked": "{ifname} (No IP) ",
+        "format-wifi": " ",
+        "format-ethernet": "{ipaddr}/{cidr}",
+        "tooltip-format": "{essid} ({signalStrength}%) via {gwaddr}",
+        "format-linked": "{ifname} (No IP)",
         "format-disconnected": "Disconnected",
         "format-alt": "{ifname}: {ipaddr}/{cidr}"
     },
