--- a/sway/waybar/config.jsonc
+++ b/sway/waybar/config.jsonc
@@ -34,7 +34,8 @@
         "tooltip-format-connected": "{controller_alias}\n\n{device_enumerate}",
         "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}"
     },
-    "tray": { },
+    "tray": { 
+    },
     "clock": {
         "tooltip-format": "\n<tt><small>{calendar}</small></tt>",
         "format": "{:%Y-%m-%d   %H:%M}",
@@ -46,13 +47,9 @@
             "critical": 15
         },
         "format": "{capacity}% {icon}",
-        "format-full": "{capacity}% {icon}",
-        "format-charging": " ",
-        "format-plugged": " ",
+        "format-charging": "",
+        "format-plugged": "",
         "format-icons": ["", "", "", "", ""]
-    },
-    "battery#bat2": {
-        "bat": "BAT2"
     },
     "power-profiles-daemon": {
         "format": "{icon} ",
@@ -66,7 +63,7 @@
         }
     },
     "network": {
-        "format-wifi": " ",
+        "format-wifi": "  ",
         "format-ethernet": "{ipaddr}/{cidr}",
         "tooltip-format": "{essid} ({signalStrength}%) via {gwaddr}",
         "format-linked": "{ifname} (No IP)",
@@ -74,10 +71,10 @@
         "format-alt": "{ifname}: {ipaddr}/{cidr}"
     },
     "pulseaudio": {
-        "format": "{volume}% {icon}",
-        "format-bluetooth": "{volume}% {icon}  {format_source}",
+        "format": "{volume}% {icon} ",
+        "format-bluetooth": "{volume}% {icon} {format_source}",
         "format-bluetooth-muted": " {icon} {format_source}",
-        "format-muted": " {format_source}",
+        "format-muted": "  ",
         "format-source": "{volume}% ",
         "format-source-muted": "",
         "format-icons": {
@@ -92,7 +89,7 @@
         "on-click": "pavucontrol"
     },
     "custom/power": {
-        "format" : " ⏻  ",
+        "format" : "⏻ ",
         "tooltip": false,
         "menu": "on-click",
         "menu-file": "$HOME/.config/waybar/power_menu.xml",
