--- a/sway/sway/config
+++ b/sway/sway/config
@@ -78,6 +78,9 @@ bindsym XF86MonBrightnessUp exec brightnessctl set 5%+
 bindsym XF86Display exec swaymsg output $laptop_display toggle
 # save screenshots in the clipboard (secondary selection)
 bindsym Print exec grim -g "$(slurp)" - | wl-copy
+# move current workspace to different monitor
+bindsym $mod+Prior move workspace to output left
+bindsym $mod+Next move workspace to output right
 
 ###########  
 ### workspaces
