--- a/terminals/tmux/tmux.conf
+++ b/terminals/tmux/tmux.conf
@@ -13,7 +13,7 @@ bind k select-pane -D
 bind l select-pane -U
 bind ';' select-pane -R
 
-bind c new-window -c "#{pane_current_path}"
+bind x new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
