--- a/sway/mako/config
+++ b/sway/mako/config
@@ -1,13 +1,18 @@
-background-color=#2e3440
-text-color=#d8dee9
-border-color=#2e3440
-default-timeout=5000
 
-format=<b>%s</b>\n%b
-
-icons=1
-max-icon-size=48
+anchor=top-center
 icon-location=left
+default-timeout=1500
+format=<b>%s</b>\n%b
+max-icon-size=48
+outer-margin=6,6,6,6
+
+background-color=#2e3440
+border-size=2
+border-radius=6
+padding=8,8,8,8
+text-color=#d8dee9
+border-color=#d8dee9
 
 [urgency=critical]
 text-color=#bf616a
+border-color=#bf616a
