--- a/sway/waybar/config.jsonc
+++ b/sway/waybar/config.jsonc
@@ -14,6 +14,7 @@
         "power-profiles-daemon",
         "battery",
         "custom/power",
+        "custom/pomodoro",
         "tray",
         "clock"
     ],
@@ -29,6 +30,13 @@
     },
     "sway/mode": {
         "format": "{}"
+    },
+    "custom/pomodoro": {
+        "format": "{}",
+        "return-type": "json",
+        "exec": "waybar-module-pomodoro",
+        "on-click": "waybar-module-pomodoro toggle",
+        "on-click-right": "waybar-module-pomodoro reset"
     },
     "sway/scratchpad": {
         "format": "{icon} {count}",
@@ -61,8 +69,7 @@
         "format-charging": "",
        	"interval": 1,
         "format-plugged": "",
-        "format-icons": ["", "", "", "", ""],
-        "on-update" : "./batteryNotification.sh"
+        "format-icons": ["", "", "", "", ""]
     },
     "power-profiles-daemon": {
         "format": "{icon}",
@@ -99,7 +106,9 @@
             "car": "",
             "default": ["", "", " "]
         },
-        "on-click": "pavucontrol"
+        "on-click": "pavucontrol", 
+        "scroll-step": 2
+
     },
     "custom/power": {
         "format" : "⏻",
