--- a/terminals/alacritty/alacritty.toml
+++ b/terminals/alacritty/alacritty.toml
@@ -1,29 +1,53 @@
-[colors]
-draw_bold_text_with_bright_colors = false
+[colors.primary]
+background = "#2e3440"
+foreground = "#d8dee9"
+dim_foreground = "#a5abb6"
 
-[colors.bright]
-black = "#6b7089"
-blue = "#91acd1"
-cyan = "#95c4ce"
-green = "#c0ca8e"
-magenta = "#ada0d3"
-red = "#e98989"
-white = "#d2d4de"
-yellow = "#e9b189"
+[colors.cursor]
+text = "#2e3440"
+cursor = "#d8dee9"
+
+[colors.vi_mode_cursor]
+text = "#2e3440"
+cursor = "#d8dee9"
+
+[colors.selection]
+text = "CellForeground"
+background = "#4c566a"
+
+[colors.search.matches]
+foreground = "CellBackground"
+background = "#88c0d0"
 
 [colors.normal]
-black = "#1e2132"
-blue = "#84a0c6"
-cyan = "#89b8c2"
-green = "#b4be82"
-magenta = "#a093c7"
-red = "#e27878"
-white = "#c6c8d1"
-yellow = "#e2a478"
+black = "#3b4252"
+red = "#bf616a"
+green = "#a3be8c"
+yellow = "#ebcb8b"
+blue = "#81a1c1"
+magenta = "#b48ead"
+cyan = "#88c0d0"
+white = "#e5e9f0"
 
-[colors.primary]
-background = "0x161821"
-foreground = "0xc6c8d1"
+[colors.bright]
+black = "#4c566a"
+red = "#bf616a"
+green = "#a3be8c"
+yellow = "#ebcb8b"
+blue = "#81a1c1"
+magenta = "#b48ead"
+cyan = "#8fbcbb"
+white = "#eceff4"
+
+[colors.dim]
+black = "#373e4d"
+red = "#94545d"
+green = "#809575"
+yellow = "#b29e75"
+blue = "#68809a"
+magenta = "#8c738c"
+cyan = "#6d96a5"
+white = "#aeb3bb"
 
 [env]
 TERM = "xterm-256color"
