--- a/terminals/tmux/tmux.conf
+++ b/terminals/tmux/tmux.conf
@@ -13,8 +13,8 @@ bind k select-pane -D
 bind l select-pane -U
 bind ';' select-pane -R
 
-bind x new-window -c "#{pane_current_path}"
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+bind v split-window -c "#{pane_current_path}"
+bind h split-window -h -c "#{pane_current_path}"
 
 set -s escape-time 0
