--- a/terminals/alacritty/alacritty.toml
+++ b/terminals/alacritty/alacritty.toml
@@ -52,6 +52,9 @@ white = "#aeb3bb"
 [env]
 TERM = "xterm-256color"
 
+[terminal.shell]
+program = "/usr/bin/fish"
+
 [font]
 size = 11
 
@@ -79,4 +82,6 @@ hide_when_typing = true
 
 [selection]
 save_to_clipboard = true
+
+[terminal]
 
