--- a/sway/sway/config
+++ b/sway/sway/config
@@ -8,6 +8,8 @@ output * bg /home/m/Documents/stuff/Nighthawks_by_Edward_Hopper_1942.jpg fill
 set $menu tofi-drun | xargs swaymsg exec --
 # My notification daemon
 exec mako
+# Adjust screen color temperature based on location/time
+exec gammastep -l 44.2:12.3 &
 # My terminal emulator
 set $term alacritty
 
@@ -15,7 +17,7 @@ set $term alacritty
 ### global style
 ###########  
 font pango:Ubuntu Nerd Font, bold 10
-gaps inner 6px
+gaps inner 6
 default_border none
 # color class           border  backgr  text    child_border
 client.focused          #c6c8d1 #c6c8d1 #161821 #84a0c6
@@ -65,7 +67,7 @@ exec_always ./clamshellmode.sh $laptop_display
 ###########  
 set $mod Mod4
 set $alt Mod1
-bindsym $mod+shift+r reload
+bindsym $mod+control+r reload
 # start my terminal
 bindsym $mod+Return exec $term
 # start my launcher
@@ -86,8 +88,6 @@ bindsym Print exec grim -g "$(slurp)" - | wl-copy
 # move current workspace to different monitor
 bindsym $mod+Prior move workspace to output left
 bindsym $mod+Next move workspace to output right
-# paste from primary register, like middle-click
-bindsym $alt+v exec wl-paste -p
 
 ###########  
 ### workspaces
@@ -177,13 +177,14 @@ bindsym $mod+j focus left
 bindsym $mod+k focus down
 bindsym $mod+l focus up
 bindsym $mod+semicolon focus right
+# focus parent/child container
 bindsym $mod+a focus parent
 bindsym $mod+c focus child
 # move focused window
-bindsym $mod+shift+j move left
-bindsym $mod+shift+k move down
-bindsym $mod+shift+l move up
-bindsym $mod+shift+semicolon move right
+bindsym $mod+control+j move left
+bindsym $mod+control+k move down
+bindsym $mod+control+l move up
+bindsym $mod+control+semicolon move right
 # kill focused window
 bindsym $mod+control+w kill
 
