--- a/sway/sway/config
+++ b/sway/sway/config
@@ -88,6 +88,7 @@ bindsym Print exec grim -g "$(slurp)" - | wl-copy
 # move current workspace to different monitor
 bindsym $mod+Prior move workspace to output left
 bindsym $mod+Next move workspace to output right
+bindsym $mod+minus scratchpad show
 
 ###########  
 ### workspaces
@@ -143,7 +144,7 @@ bindsym $mod+t split vertical; layout tabbed
 # split the focused container
 bindsym $mod+v split vertical
 bindsym $mod+h split horizontal
-bindsym $mod+space floating toggle
+bindsym $mod+comma toggle
 
 ###########  
 ### windows
@@ -158,9 +159,11 @@ assign [app_id="libreoffice"] $wsOffice
 assign [app_id="Electron"] $wsStuff
 assign [app_id="Bruno"] $wsStuff
 assign [app_id="com.transmissionbt*"] $wsStuff
+for_window [app_id="sublime_text"] move scratchpad
 # assign window options with window criteria
 for_window [app_id="org.pulseaudio.pavucontrol"] floating enable, border normal
 for_window [title="^Picture"] floating enable, sticky enable, border none
+
 focus_follows_mouse yes
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -171,6 +174,10 @@ mode "resize" {
         # back to normal
         bindsym Escape mode "default"
 }
+
+floating_maximum_size  800 x 800
+floating_modifier control
+
 bindsym $mod+r mode "resize"
 # change window focus
 bindsym $mod+j focus left
@@ -185,6 +192,7 @@ bindsym $mod+control+j move left
 bindsym $mod+control+k move down
 bindsym $mod+control+l move up
 bindsym $mod+control+semicolon move right
+bindsym $mod+control+minus  move scratchpad
 # kill focused window
 bindsym $mod+control+w kill
 
@@ -207,3 +215,5 @@ exec $term
 exec chromium
 exec betterbird
 exec telegram-desktop
+exec subl 
+
