--- a/thinkpad_disable_led.service
+++ b/thinkpad_disable_led.service
@@ -1,10 +1,15 @@
 [Unit]
 Description=Disables the red logo LED at startup
-After=basic.target suspend.target 
+After=suspend.target hibernate.target hybrid-sleep.target suspend-then-hibernate.target
+Requires=sys-devices-platform-thinkpad_acpi.device
 
 [Service]
 Type=exec
-ExecStart=sh -c "echo 0 | sudo tee /sys/class/leds/tpacpi::power/brightness "
+RemainAfterExit=yes
+ExecStart=/bin/sh -c 'echo 0 > /sys/class/leds/tpacpi::power/brightness && echo 0 > /sys/class/leds/tpacpi::lid_logo_dot/brightness'
+ExecStartPost=/bin/sh -c '[ "$(cat /sys/class/leds/tpacpi::power/brightness)" = "0" ] && [ "$(cat /sys/class/leds/tpacpi::lid_logo_dot/brightness)" = "0" ]'
+Restart=on-failure
+RestartSec=1s
 
 [Install]
-WantedBy=basic.target suspend.target
+WantedBy=basic.target suspend.target sleep.target hibernate.target hybrid-sleep.target suspend-then-hibernate.target
