--- a/thinkpad_disable_led.service
+++ b/thinkpad_disable_led.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Disables the red logo LED at startup
-After=suspend.target hibernate.target hybrid-sleep.target suspend-then-hibernate.target
+After=suspend.target hibernate.target hybrid-sleep.target suspend-then-hibernate.target resume.target
 Requires=sys-devices-platform-thinkpad_acpi.device
 
 [Service]
@@ -12,4 +12,4 @@ Restart=on-failure
 RestartSec=1s
 
 [Install]
-WantedBy=basic.target suspend.target sleep.target hibernate.target hybrid-sleep.target suspend-then-hibernate.target
+WantedBy=basic.target suspend.target sleep.target hibernate.target hybrid-sleep.target suspend-then-hibernate.target resume.target
