--- a/sway/sway/config
+++ b/sway/sway/config
@@ -40,8 +40,6 @@ output $laptop_display {
     res 2880x1800@120.000Hz
     scale 2
 }
-# second external monitor in daisychain
-output "DP-6" transform 90
 
 # Clamshell mode for laptop
 # if the lid is closed whith an external monitor then disable it
@@ -81,21 +79,17 @@ bindsym Print exec grim -g "$(slurp)" - | wl-copy
 bindsym $mod+Prior move workspace to output left
 bindsym $mod+Next move workspace to output right
 
-
 ###########  
 ### workspaces
 ###########  
-set $wsOffice 5
-set $wsStuff 6
-set $wsSocial 7
-set $wsMail 8
-set $wsMedia 9
-set $wsMusic M
 # Allow switching between workspaces with left and right swipes
 bindgesture swipe:right workspace prev
 bindgesture swipe:left workspace next
 # switch to workspace
-bindsym $mod+Tab workspace back_and_forth
+set $ws_office 5
+set $ws_stuff 6
+set $ws_media 9
+set $ws_main M
 bindsym $mod+1 workspace number 1
 bindsym $mod+2 workspace number 2
 bindsym $mod+3 workspace number 3
@@ -105,10 +99,12 @@ bindsym $mod+6 workspace number 6
 bindsym $mod+7 workspace number 7
 bindsym $mod+8 workspace number 8
 bindsym $mod+9 workspace number 9
-bindsym $mod+m workspace M
+bindsym $mod+m workspace $ws_main
 # navigate active workspaces
 bindsym $mod+comma workspace prev
 bindsym $mod+period workspace next
+bindsym $mod+Tab workspace back_and_forth
+#workspace $ws_main output $laptop_display
 
 ###########  
 ### containers
@@ -123,7 +119,8 @@ bindsym $mod+control+6 move container to workspace number 6
 bindsym $mod+control+7 move container to workspace number 7
 bindsym $mod+control+8 move container to workspace number 8
 bindsym $mod+control+9 move container to workspace number 9
-bindsym $mod+control+0 move container to workspace number 10
+bindsym $mod+control+m move container to workspace $ws_main
+
 # change layout mode for the focused container
 bindsym $mod+w layout tabbed
 bindsym $mod+s layout stacking
@@ -139,17 +136,16 @@ bindsym $mod+h split horizontal
 ###########  
 # assign window to a workspace with window criteria
 # use swaymsg -t get_tree 
-assign [app_id="org.telegram.desktop"] $wsSocial
-assign [app_id="spotify"] $wsMusic
-assign [app_id="rhythmbox"] $wsMusic
-assign [app_id="betterbird"] $wsMail
-assign [app_id="libreoffice"] $wsOffice
-assign [app_id="Electron"] $wsStuff
-assign [app_id="Bruno"] $wsStuff
-assign [app_id="com.transmissionbt*"] $wsStuff
-# assign window options with window criteria
-for_window [app_id="org.pulseaudio.pavucontrol"] floating enable, border normal
-for_window [title="^Picture"] floating enable, sticky enable, border none
+assign [app_id="betterbird"] $ws_main
+assign [app_id="spotify"] $ws_main
+assign [app_id="libreoffice"] $ws_office
+assign [app_id="Electron"] $ws_stuff
+assign [app_id="Bruno"] $ws_stuff
+assign [app_id="com.transmissionbt*"] $ws_stuff
+# floating windows for daemonized programs 
+for_window [app_id="org.telegram.desktop"] floating enable, border none
+for_window [app_id="org.pulseaudio.pavucontrol"] floating enable, border none
+for_window [title="^Picture"] floating enable, border none
 # Scratchpad
 bindsym $mod+control+minus move scratchpad
 bindsym $mod+minus scratchpad show
@@ -186,6 +182,23 @@ bindsym $mod+f fullscreen toggle
 bindsym $mod+control+space floating toggle
 
 ###########  
+### global style
+###########  
+font pango:Ubuntu Nerd Font, bold 10
+gaps inner 2
+gaps outer 2
+default_border none
+workspace_layout tabbed
+
+# color class           border  backgr  text    child_border
+client.focused          #c6c8d1 #c6c8d1 #161821 #84a0c6
+client.focused_inactive #161821 #161821 #999999 #454948
+client.unfocused        #161821 #161821 #999999 #454948
+client.urgent           #b4be82 #b4be82 #161821 #268BD2
+client.placeholder      #000000 #0c0c0c #999999 #000000
+client.background       #161821
+
+###########  
 ### status bar
 ###########  
 bar {
@@ -199,23 +212,6 @@ exec $term
 exec chromium
 exec betterbird
 exec telegram-desktop
-
-
-###########  
-### global style
-###########  
-font pango:Ubuntu Nerd Font, bold 10
-gaps inner 2
-gaps outer 2
-default_border none
-
-# color class           border  backgr  text    child_border
-client.focused          #c6c8d1 #c6c8d1 #161821 #84a0c6
-client.focused_inactive #161821 #161821 #999999 #454948
-client.unfocused        #161821 #161821 #999999 #454948
-client.urgent           #b4be82 #b4be82 #161821 #268BD2
-client.placeholder      #000000 #0c0c0c #999999 #000000
-client.background       #161821
 
 
 ###########  
