--- a/terminals/tmux/tmux.conf
+++ b/terminals/tmux/tmux.conf
@@ -2,6 +2,19 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 set -g status-right "#{pane_title}"
 set -g status-style bg=default
 set -g status-position top 
+set -s escape-time 0
+set -g automatic-rename on
+set -g allow-rename off
+set -g set-titles on
+#   #S = tmux session name
+#   #I = tmux window index
+#   #W = tmux window name
+#   #P = current pane index
+#   #h = hostname (short form)
+#   #H = hostname (full form)
+#   #T = pane title (often the command running in it)
+set -g set-titles-string '#W@#h'
+
 set -g mouse on
 setw -gq utf8 on
 set -g prefix C-a
@@ -17,4 +30,3 @@ bind c new-window -c "#{pane_current_path}"
 bind v split-window -c "#{pane_current_path}"
 bind h split-window -h -c "#{pane_current_path}"
 
-set -s escape-time 0
