--- a/terminals/tmux/tmux.conf
+++ b/terminals/tmux/tmux.conf
@@ -13,7 +13,7 @@ set -g set-titles on
 #   #h = hostname (short form)
 #   #H = hostname (full form)
 #   #T = pane title (often the command running in it)
-set -g set-titles-string '#W@#h'
+set -g set-titles-string '#W::#h'
 
 set -g mouse on
 setw -gq utf8 on
