--- a/sway/sway/config
+++ b/sway/sway/config
@@ -153,17 +153,17 @@ for_window [title="^Picture"] floating enable, border none
 bindsym $mod+control+minus move scratchpad
 bindsym $mod+minus scratchpad show
 focus_follows_mouse yes
-# resize window (you can also use the mouse for that)
+# resize window  mode
+bindsym $mod+Control+g exec "notify-send -u critical 'RESIZE MODE' 'Use j, k, l, ; to resize. ESC to exit.' -p > /tmp/resize_notification_id ; swaymsg mode resize"
 mode "resize" {
         bindsym j resize shrink width 10 px or 10 ppt
         bindsym k resize grow height 10 px or 10 ppt
         bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 11 px or 10 ppt
-        # back to normal
-        bindsym Escape mode "default"
+        bindsym semicolon resize grow width 10 px or 10 ppt
+        # back to normal and close notification
+        bindsym Escape exec "makoctl dismiss -n $(cat /tmp/resize_notification_id); rm /tmp/resize_notification_id; swaymsg mode default"
 }
-bindsym $mod+r mode "resize"
-# change window focus
+
 bindsym $mod+j focus left
 bindsym $mod+k focus down
 bindsym $mod+l focus up
