--- a/sway/mako/config
+++ b/sway/mako/config
@@ -1,11 +1,10 @@
-
+[default]
 anchor=top-center
 icon-location=left
 default-timeout=1500
 format=<b>%s</b>\n%b
 max-icon-size=48
 outer-margin=6,6,6,6
-
 width=400
 background-color=#2e3440
 border-size=2
@@ -13,6 +12,9 @@ border-radius=6
 padding=8,8,8,8
 text-color=#d8dee9
 border-color=#d8dee9
+
+[urgency=normal]
+timeout=1500
 
 [urgency=critical]
 text-color=#bf616a
