--- a/terminals/tmux/tmux.conf
+++ b/terminals/tmux/tmux.conf
@@ -1,4 +1,4 @@
-set -ag terminal-overrides ",xterm-256color:RGB"
+set -ag terminal-overrides ",xterm-254color:RGB"
 set -g status-right "#{pane_title}"
 set -g status-style bg=default
 set -g status-position top 
@@ -14,19 +14,18 @@ set -g set-titles on
 #   #H = hostname (full form)
 #   #T = pane title (often the command running in it)
 set -g set-titles-string '#W::#h'
+set-option -g history-limit 10000
 
+set -g mode-keys vi
 set -g mouse on
 setw -gq utf8 on
-set -g prefix C-a
 unbind-key C-b
+set -g prefix C-a
 bind C-a send-prefix
+
+bind c new-window -c "#{pane_current_path}"
 
 bind j select-pane -L
 bind k select-pane -D
 bind l select-pane -U
 bind ';' select-pane -R
-
-bind c new-window -c "#{pane_current_path}"
-bind v split-window -c "#{pane_current_path}"
-bind h split-window -h -c "#{pane_current_path}"
-
