--- a/sway/sway/config
+++ b/sway/sway/config
@@ -52,8 +52,8 @@ exec_always ./clamshellmode.sh $laptop_display
 ###########  
 ### system
 ###########  
-bindsym $mod+control+r reload
-bindsym $mod+control+e exec swaynag -t warning -m 'Exit?' -B 'Y' 'swaymsg exit'
+bindsym $mod+shift+r reload
+bindsym $mod+shift+e exec swaynag -t warning -m 'Exit?' -B 'Y' 'swaymsg exit'
 # disable mouse/trakpad es. scrolling on tabbed layout
 bindsym button4 nop
 bindsym button5 nop
@@ -113,16 +113,16 @@ bindsym $mod+Tab workspace back_and_forth
 ### containers
 ###########  
 # move focused container to workspace
-bindsym $mod+control+1 move container to workspace number 1
-bindsym $mod+control+2 move container to workspace number 2
-bindsym $mod+control+3 move container to workspace number 3
-bindsym $mod+control+4 move container to workspace number 4
-bindsym $mod+control+5 move container to workspace number 5
-bindsym $mod+control+6 move container to workspace number 6
-bindsym $mod+control+7 move container to workspace number 7
-bindsym $mod+control+8 move container to workspace number 8
-bindsym $mod+control+9 move container to workspace number 9
-bindsym $mod+control+m move container to workspace $ws_main
+bindsym $mod+shift+1 move container to workspace number 1
+bindsym $mod+shift+2 move container to workspace number 2
+bindsym $mod+shift+3 move container to workspace number 3
+bindsym $mod+shift+4 move container to workspace number 4
+bindsym $mod+shift+5 move container to workspace number 5
+bindsym $mod+shift+6 move container to workspace number 6
+bindsym $mod+shift+7 move container to workspace number 7
+bindsym $mod+shift+8 move container to workspace number 8
+bindsym $mod+shift+9 move container to workspace number 9
+bindsym $mod+shift+m move container to workspace $ws_main
 # change layout mode for the focused container
 bindsym $mod+w layout tabbed
 bindsym $mod+s layout stacking
@@ -149,11 +149,11 @@ assign [app_id="com.transmissionbt*"] $ws_stuff
 # floating windows for daemonized programs 
 for_window [app_id="org.pulseaudio.pavucontrol"] floating enable, border none
 # Scratchpad
-bindsym $mod+control+minus move scratchpad
+bindsym $mod+shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
 focus_follows_mouse yes
 # resize window  mode
-bindsym $mod+Control+g exec "notify-send -u critical 'RESIZE MODE' 'Use j, k, l, ; to resize. ESC to exit.' -p > /tmp/resize_notification_id ; swaymsg mode resize"
+bindsym $mod+shift+g exec "notify-send -u critical 'RESIZE MODE' 'Use j, k, l, ; to resize. ESC to exit.' -p > /tmp/resize_notification_id ; swaymsg mode resize"
 mode "resize" {
         bindsym j resize shrink width 10 px or 10 ppt
         bindsym k resize grow height 10 px or 10 ppt
@@ -171,15 +171,15 @@ bindsym $mod+semicolon focus right
 bindsym $mod+a focus parent
 bindsym $mod+c focus child
 # move focused window
-bindsym $mod+control+j move left
-bindsym $mod+control+k move down
-bindsym $mod+control+l move up
-bindsym $mod+control+semicolon move right
+bindsym $mod+shift+j move left
+bindsym $mod+shift+k move down
+bindsym $mod+shift+l move up
+bindsym $mod+shift+semicolon move right
 # kill focused window
 bindsym $mod+q kill
 # fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
-bindsym $mod+control+space floating toggle
+bindsym $mod+shift+space floating toggle
 bindsym button7 nop  
 
 
@@ -213,7 +213,7 @@ bar {
 # My notification daemon
 exec mako
 # Adjust screen color temperature based on location/time
-exec gammastep -l 44.2:12.3 &
+exec gammastep-indicator
 # My apps
 exec chromium
 exec $term
