--- a/hyprland/hypr/hyprland.conf
+++ b/hyprland/hypr/hyprland.conf
@@ -1,19 +1,44 @@
+
+
 ################
 ### MONITORS ###
 ################
-
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=DP-1, 3840x2160@60,auto,1
-monitor=DP-2, 3840x2160@60,auto,1
+# 27" second external displays
+monitor = desc:LG Electronics LG HDR 4K 0x00006D62, 2880x1800@90, 0x0, 1, transform, 3
+# Clamshell mode configuration
+## Lid is opened
+bindl=,switch:off:Lid Switch,exec,~/.config/hypr/lid.sh open
+## Lid is closed
+bindl=,switch:on:Lid Switch,exec,~/.config/hypr/lid.sh close
+
+#############
+### INPUT ###
+#############
+# https://wiki.hyprland.org/Configuring/Variables/#input
+
+device {
+    # thinkpad red nipple 
+    name = tpps/2-elan-trackpoint
+}
+device {
+    # thinkpad laptop keyboard
+    name = at-translated-set-2-keyboard
+    kb_options = caps:ctrl_modifier,altwin:swap_alt_win,compose:ralt
+}
+
+gestures {
+    workspace_swipe = true
+}
+
 
 ###################
 ### MY PROGRAMS ###
 ###################
-
 # See https://wiki.hyprland.org/Configuring/Keywords/
-# Set programs that you use
+
 $terminal = alacritty
-$fileManager = thunar
+$fileManager = nautilus
 $menu = wofi --show=drun
 
 #################
@@ -22,10 +47,10 @@ $menu = wofi --show=drun
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
-
-# exec-once = $terminal
 exec-once = nm-applet &
 exec-once = waybar & hyprpaper
+exec-once = $terminal
+exec-once = chromium
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -42,9 +67,9 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 6 
-    gaps_out = 12 
-    border_size = 0
+    gaps_in = 3
+    gaps_out = 4
+    border_size = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgb(595959)
@@ -70,38 +95,13 @@ group {
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     rounding = 10
-
-    # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
-
-    drop_shadow = false
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
-
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
-    blur {
-        enabled = true
-        size = 3
-        passes = 1
-
-        vibrancy = 0.1696
-    }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
     enabled = false
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
 }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
@@ -115,46 +115,26 @@ master {
     new_status = master
 }
 
-#############
-### INPUT ###
-#############
-
-# https://wiki.hyprland.org/Configuring/Variables/#input
-input {
-    kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
-
-    follow_mouse = 0
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-
-    touchpad {
-        natural_scroll = false
-    }
-}
-
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = true
-}
 
 ###################
 ### KEYBINDINGS ###
 ###################
-
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+$mainMod = SUPER
+bind = $mainMod, Q, killactive
+bind = esc + $mainMod, Q, exit
+bind = $mainMod, F ,fullscreen
+
+
 bind = $mainMod, return, exec, $terminal
-bind = $mainMod, Q, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
+
 bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, V, togglefloating,
+bind = $mainMod, w, togglegroup
+bind = $mainMod, tab, changegroupactive
 
 # Move focus
 bind = $mainMod, j, movefocus, l
@@ -163,10 +143,10 @@ bind = $mainMod, k, movefocus, u
 bind = $mainMod, l, movefocus, d
 
 # Move window
-bind = Shift + $mainMod, j, movewindow, l
-bind = Shift + $mainMod, semicolon, movewindow, r
-bind = Shift + $mainMod, k, movewindow, u
-bind = Shift + $mainMod, l, movewindow, d
+bind = Control + $mainMod, j, movewindow, l
+bind = Control + $mainMod, semicolon, movewindow, r
+bind = Control + $mainMod, k, movewindow, u
+bind = Control + $mainMod, l, movewindow, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -180,24 +160,21 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+# Move active window to a workspace 
+bind = $mainMod Control, 1, movetoworkspace, 1
+bind = $mainMod Control, 2, movetoworkspace, 2
+bind = $mainMod Control, 3, movetoworkspace, 3
+bind = $mainMod Control, 4, movetoworkspace, 4
+bind = $mainMod Control, 5, movetoworkspace, 5
+bind = $mainMod Control, 6, movetoworkspace, 6
+bind = $mainMod Control, 7, movetoworkspace, 7
+bind = $mainMod Control, 8, movetoworkspace, 8
+bind = $mainMod Control, 9, movetoworkspace, 9
+bind = $mainMod Control, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
-bind = $mainMod, w, togglegroup
-bind = control , tab, changegroupactive
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -221,21 +198,4 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-
-# Ignore maximize requests from apps. You'll probably like this.
-windowrulev2 = suppressevent maximize, class:.*
-
-# Fix some dragging issues with XWayland
-windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+bindl =  XF86Display, exec, ~/.config/hypr/lid.sh open
