--- a/hyprland/hypr/hyprpaper.conf
+++ b/hyprland/hypr/hyprpaper.conf
@@ -1,7 +1,5 @@
 preload = /home/m/Documents/stuff/Nighthawks_by_Edward_Hopper_1942.jpg
-
 wallpaper = , /home/m/Documents/stuff/Nighthawks_by_Edward_Hopper_1942.jpg
 
-splash = true
-
+splash = false
 ipc = off 
